# sn_mpt

./: .gitignore
cairo0/: Makefile
cairo0/scripts/: launch_cairo_files.py  setup.sh
cairo0/src/: mpt.cairo  mpt_input.json
cairo0/tools/py/: utils.py
cairo1/: .tool-versions  Scarb.toml
cairo1/src/: lib.cairo
rust/: Cargo.toml  README.md
rust/src/: batch_proof.rs  batcher.rs  cache.rs  db.rs  errors.rs  items.rs  main.rs  main_old.rs  persistance.rs  proof.rs  tree.rs  utils.rs
rust/src/db/: batch.rs  mod.rs  trie.rs
rust/src/handlers/: batch.rs
rust/src/models/: batch.rs
rust/src/routes/: batch.rs  mod.rs
rust/src/trie_cache/: batch_proof.rs  item.rs  mod.rs  proof.rs  trie.rs
