[package]
name = "sn_mpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinder-merkle-tree = { git = "https://github.com/petscheit/pathfinder"}
pathfinder-common = { git = "https://github.com/petscheit/pathfinder"}
pathfinder-storage = { git = "https://github.com/petscheit/pathfinder"}
pathfinder-crypto = { git = "https://github.com/petscheit/pathfinder"}

zstd-sys = "=2.0.9" # required to fix build error
bitvec = "1.0.1"
anyhow = "1.0.83"
hex = "0.4.3"
rand = "0.8.5"
num-bigint = { version = "0.4", features = ["serde"] }
serde_derive = "1.0"
num-traits = "0.2"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tiny-keccak = "2.0.2"
rusqlite = "0.28.0"
num-derive = "0.4.2"
